# verona

./: .gitignore
experiments/wasm_sandbox/: CMakeLists.txt
experiments/wasm_sandbox/include/wasm_sandbox/: sandbox.h
experiments/wasm_sandbox/include/wasm_sandbox/backend/: region.h
experiments/wasm_sandbox/include/wasm_sandbox/sandbox/: cxxsandbox.h  internals.h
experiments/wasm_sandbox/include/wasm_sandbox/wasm/: embedder_resolver.h  snmalloc_embeddings.h  utils.h  wasmsandbox.h
experiments/wasm_sandbox/src/: libwasmsandbox.cc
experiments/wasm_sandbox/tests/: CMakeLists.txt  sandbox-basic-adder.cc  sandbox-measure.cc  sandbox-measure.h  sandboxlib-basic-adder.cc  sandboxlib-measure.cc
